Add LargeVariableHeight sample

--- a/src/DataGridSample/MainWindow.axaml
+++ b/src/DataGridSample/MainWindow.axaml
@@ -14,6 +14,9 @@
     <TabItem Header="Variable Height Scrolling">
       <local:VariableHeightPage />
     </TabItem>
+    <TabItem Header="Large Variable Height">
+      <local:LargeVariableHeightPage />
+    </TabItem>
     <TabItem Header="Pixel Columns">
       <local:PixelColumnsPage />
     </TabItem>
