--- a/src/DataGridSample/MainWindow.axaml
+++ b/src/DataGridSample/MainWindow.axaml
@@ -125,6 +125,9 @@
     <TabItem Header="Auto-scroll">
       <pages:AutoScrollPage />
     </TabItem>
+    <TabItem Header="Styling &amp; Themes">
+      <pages:StylingShowcasePage />
+    </TabItem>
   </TabControl>
 
 </Window>
