Add Programmatic Grouping sample

--- a/src/DataGridSample/MainWindow.axaml
+++ b/src/DataGridSample/MainWindow.axaml
@@ -74,6 +74,9 @@
     <TabItem Header="Grouping">
       <local:GroupingPage />
     </TabItem>
+    <TabItem Header="Programmatic Grouping">
+      <pages:ProgrammaticGroupingPage />
+    </TabItem>
     <TabItem Header="Editable">
       <local:EditablePage />
     </TabItem>
