--- a/src/Avalonia.Controls.DataGrid/Themes/Fluent.xaml
+++ b/src/Avalonia.Controls.DataGrid/Themes/Fluent.xaml
@@ -33,6 +33,10 @@
           <SolidColorBrush x:Key="DataGridSummaryRowForegroundBrush" Color="{DynamicResource SystemBaseHighColor}" />
           <SolidColorBrush x:Key="DataGridTotalSummaryRowBackgroundBrush" Color="{DynamicResource SystemChromeMediumColor}" />
           <SolidColorBrush x:Key="DataGridGroupSummaryRowBackgroundBrush" Color="{DynamicResource SystemChromeLowColor}" />
+          <SolidColorBrush x:Key="DataGridFilterFlyoutBackgroundBrush" Color="#F8F8F8" />
+          <SolidColorBrush x:Key="DataGridSearchMatchBrush" Color="#FFF2B6" />
+          <SolidColorBrush x:Key="DataGridSearchCurrentBrush" Color="#FFD37A" />
+          <SolidColorBrush x:Key="DataGridSearchMatchForegroundBrush" Color="#202020" />
         </ResourceDictionary>
         <ResourceDictionary x:Key="Default">
           <SolidColorBrush x:Key="DataGridColumnHeaderForegroundBrush" Color="{DynamicResource SystemBaseMediumColor}" />
@@ -59,6 +63,10 @@
           <SolidColorBrush x:Key="DataGridSummaryRowForegroundBrush" Color="{DynamicResource SystemBaseHighColor}" />
           <SolidColorBrush x:Key="DataGridTotalSummaryRowBackgroundBrush" Color="{DynamicResource SystemChromeMediumColor}" />
           <SolidColorBrush x:Key="DataGridGroupSummaryRowBackgroundBrush" Color="{DynamicResource SystemChromeLowColor}" />
+          <SolidColorBrush x:Key="DataGridFilterFlyoutBackgroundBrush" Color="#F8F8F8" />
+          <SolidColorBrush x:Key="DataGridSearchMatchBrush" Color="#FFF2B6" />
+          <SolidColorBrush x:Key="DataGridSearchCurrentBrush" Color="#FFD37A" />
+          <SolidColorBrush x:Key="DataGridSearchMatchForegroundBrush" Color="#202020" />
         </ResourceDictionary>
       </ResourceDictionary.ThemeDictionaries>
 
@@ -75,14 +83,29 @@
       <x:Double x:Key="DataGridRowGroupHeaderFontSize">15</x:Double>
       <x:Double x:Key="DataGridRowGroupHeaderMinHeight">32</x:Double>
       <x:Double x:Key="DataGridSummaryRowMinHeight">32</x:Double>
+      <x:Double x:Key="DataGridColumnHeaderIconSize">12</x:Double>
+      <x:Double x:Key="DataGridColumnHeaderIconSpacing">4</x:Double>
+      <x:Double x:Key="DataGridRowHeaderDragGripSize">12</x:Double>
+      <x:Double x:Key="DataGridRowGroupHeaderExpanderSize">12</x:Double>
+      <x:Double x:Key="DataGridHierarchicalExpanderSize">28</x:Double>
+      <x:Double x:Key="DataGridHierarchicalExpanderGlyphSize">10</x:Double>
+      <x:Double x:Key="DataGridDropLocationIndicatorWidth">2</x:Double>
+
+      <!-- Grid Sizing -->
+      <GridLength x:Key="DataGridRowHeaderIndicatorWidth">16</GridLength>
 
       <!-- Margins and Paddings -->
       <Thickness x:Key="DataGridCellTextBlockMargin">12,0,12,0</Thickness>
       <Thickness x:Key="DataGridCellComboBoxPadding">8,0</Thickness>
       <Thickness x:Key="DataGridColumnHeaderPadding">12,0,0,0</Thickness>
+      <Thickness x:Key="DataGridColumnHeaderSortIconMargin">0,0,4,0</Thickness>
       <Thickness x:Key="DataGridRowGroupHeaderExpanderMargin">12,0,0,0</Thickness>
       <Thickness x:Key="DataGridRowGroupHeaderContentMargin">12,0,0,0</Thickness>
+      <Thickness x:Key="DataGridRowGroupHeaderTextMargin">4,0,0,0</Thickness>
+      <Thickness x:Key="DataGridHierarchicalPresenterContentMargin">6,0,0,0</Thickness>
+      <Thickness x:Key="DataGridFilterFlyoutPadding">12</Thickness>
       <Thickness x:Key="DataGridBorderThickness">0</Thickness>
+      <CornerRadius x:Key="DataGridFilterFlyoutCornerRadius">4</CornerRadius>
 
       <!-- GridLines -->
       <DataGridGridLinesVisibility x:Key="DataGridGridLinesVisibility">None</DataGridGridLinesVisibility>
@@ -101,6 +124,7 @@
       <SolidColorBrush x:Key="DataGridFillerColumnGridLinesBrush" Color="Transparent" />
       <SolidColorBrush x:Key="DataGridBackgroundBrush" Color="Transparent" />
       <SolidColorBrush x:Key="DataGridBorderBrush" Color="Transparent" />
+      <SolidColorBrush x:Key="DataGridDropLocationIndicatorBackground" Color="#3F4346" />
       <StaticResource x:Key="DataGridDropLocationIndicatorBrush" ResourceKey="DataGridDropLocationIndicatorBackground" />
       <StaticResource x:Key="DataGridCellDataValidationErrorsTheme" ResourceKey="TooltipDataValidationErrors" />
     </ResourceDictionary>
