--- a/src/Avalonia.Controls.DataGrid/Themes/Simple.xaml
+++ b/src/Avalonia.Controls.DataGrid/Themes/Simple.xaml
@@ -34,6 +34,10 @@
       <SolidColorBrush x:Key="DataGridBackgroundBrush" Color="{DynamicResource ThemeBackgroundColor}" />
       <SolidColorBrush x:Key="DataGridBorderBrush" Color="{DynamicResource ThemeBorderLowColor}" />
       <SolidColorBrush x:Key="DataGridDropLocationIndicatorBrush" Color="{DynamicResource ThemeBorderHighColor}" />
+      <SolidColorBrush x:Key="DataGridFilterFlyoutBackgroundBrush" Color="#F8F8F8" />
+      <SolidColorBrush x:Key="DataGridSearchMatchBrush" Color="#FFF2B6" />
+      <SolidColorBrush x:Key="DataGridSearchCurrentBrush" Color="#FFD37A" />
+      <SolidColorBrush x:Key="DataGridSearchMatchForegroundBrush" Color="#202020" />
       <StaticResource x:Key="DataGridRowDropIndicatorBrush" ResourceKey="HighlightBrush" />
 
       <!-- Opacity Resources -->
@@ -50,14 +54,29 @@
       <x:Double x:Key="DataGridColumnHeaderMinHeight">24</x:Double>
       <x:Double x:Key="DataGridRowGroupHeaderFontSize">14</x:Double>
       <x:Double x:Key="DataGridRowGroupHeaderMinHeight">20</x:Double>
+      <x:Double x:Key="DataGridColumnHeaderIconSize">12</x:Double>
+      <x:Double x:Key="DataGridColumnHeaderIconSpacing">4</x:Double>
+      <x:Double x:Key="DataGridRowHeaderDragGripSize">12</x:Double>
+      <x:Double x:Key="DataGridRowGroupHeaderExpanderSize">12</x:Double>
+      <x:Double x:Key="DataGridHierarchicalExpanderSize">28</x:Double>
+      <x:Double x:Key="DataGridHierarchicalExpanderGlyphSize">10</x:Double>
+      <x:Double x:Key="DataGridDropLocationIndicatorWidth">2</x:Double>
+
+      <!-- Grid Sizing -->
+      <GridLength x:Key="DataGridRowHeaderIndicatorWidth">16</GridLength>
 
       <!-- Margins and Paddings -->
       <Thickness x:Key="DataGridCellTextBlockMargin">4</Thickness>
       <Thickness x:Key="DataGridCellComboBoxPadding">4,0</Thickness>
       <Thickness x:Key="DataGridColumnHeaderPadding">4</Thickness>
+      <Thickness x:Key="DataGridColumnHeaderSortIconMargin">0,0,4,0</Thickness>
       <Thickness x:Key="DataGridRowGroupHeaderExpanderMargin">2,0,0,0</Thickness>
       <Thickness x:Key="DataGridRowGroupHeaderContentMargin">0,1,0,1</Thickness>
+      <Thickness x:Key="DataGridRowGroupHeaderTextMargin">4,0,0,0</Thickness>
+      <Thickness x:Key="DataGridHierarchicalPresenterContentMargin">6,0,0,0</Thickness>
+      <Thickness x:Key="DataGridFilterFlyoutPadding">12</Thickness>
       <Thickness x:Key="DataGridBorderThickness">1</Thickness>
+      <CornerRadius x:Key="DataGridFilterFlyoutCornerRadius">4</CornerRadius>
     </ResourceDictionary>
   </Styles.Resources>
 </Styles>
