--- a/src/Avalonia.Controls.DataGrid/Themes/Simple.v2.xaml
+++ b/src/Avalonia.Controls.DataGrid/Themes/Simple.v2.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Avalonia.Controls">
   <!-- Simple v2 keeps the base Simple styling and only swaps the DataGrid template to the ScrollViewer-based version. -->
-  <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Simple.xaml" />
+  <StyleInclude Source="/Themes/Simple.xaml" />
   <Styles.Resources>
    <ResourceDictionary>
     <ControlTheme x:Key="{x:Type DataGrid}"
