--- a/src/Avalonia.Controls.DataGrid/Themes/Simple.xaml
+++ b/src/Avalonia.Controls.DataGrid/Themes/Simple.xaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <!-- Include Generic.xaml with all ControlThemes -->
-  <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Generic.xaml" />
+  <StyleInclude Source="/Themes/Generic.xaml" />
 
   <Styles.Resources>
     <ResourceDictionary>
