ProDiagnostics: add assets inspector

--- a/src/ProDiagnostics/Diagnostics/Views/MainView.xaml
+++ b/src/ProDiagnostics/Diagnostics/Views/MainView.xaml
@@ -260,6 +260,7 @@
       <TabStripItem Content="Logical Tree" />
       <TabStripItem Content="Visual Tree" />
       <TabStripItem Content="Resources" />
+      <TabStripItem Content="Assets" />
       <TabStripItem Content="Events" />
       <TabStripItem Content="HotKeys" IsVisible="False" />
     </TabStrip>
