--- a/src/DataGridSample/App.axaml
+++ b/src/DataGridSample/App.axaml
@@ -1,5 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:datagridThemes="clr-namespace:Avalonia.Controls.DataGridThemes;assembly=Avalonia.Controls.DataGrid"
              x:Class="DataGridSample.App"
              RequestedThemeVariant="Light">
 
@@ -7,7 +8,8 @@
 
     <FluentTheme />
     <!-- <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" /> -->
-    <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.v2.xaml" />
+    <datagridThemes:DataGridFluentV2Theme />
+    <!-- <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.v2.xaml" /> -->
 
     <!-- <SimpleTheme /> -->
     <!-- <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Simple.xaml" /> -->
